Add the title description to component_iri and change the look an feel

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -142,7 +142,7 @@
 
 /* INPUTS
 ------------------------------------------------------- */
-input[type="text"], input[type="password"], textarea {
+input[type="text"], input[type="password"], input[type="url"],textarea {
 	padding: 3px;
 	padding-left: 6px;
 	padding-right: 6px;
