--- a/lib/dedalo/component_iri/css/component_iri.less
+++ b/lib/dedalo/component_iri/css/component_iri.less
@@ -13,11 +13,20 @@
 	}
 	.css_wrap_iri_tm .content_data {
 	}
+	.css_iri_content {
+		display: flex;
+	}
 
 	/* INPUT
 	------------------------------------------------------- */
 	.css_wrap_iri input.css_iri {
-		width: 89%;
+		flex-grow: 1;
+	}
+	.css_iri_validate:valid{
+		border-color: 0;
+	}
+	.css_iri_validate:invalid{
+		border-color: #d47941;
 	}
 
 	/* LANG
@@ -50,33 +59,17 @@
 	}
 
 	.btn_go_iri {
-		/*
-		text-transform: none;
-	    display: inline-block;
-	    float: none;
-	    margin-right: 4px;
-	    margin-left: 0;
-	    margin-top: 0;
-	    // margin-bottom: 10px; 
-	    padding: 4px;
-	    white-space: nowrap;
-	    font-size: 84%;
-	    font-weight: normal;
-	    background-image: none;
-	    box-shadow: none;
-	    position: relative;
-	    */
+
 		margin: 0;
 		padding: 5px;
 		padding-right: 20px;
-		margin-top: 1px;
 
 		padding-bottom: 4px;
 		vertical-align: bottom;
 	}
 
 	.css_iri_link {
-		display: inline-block;
+		//display: inline-block;
 	    width: 14px;
 	    height: 14px;
 	    line-height: 14px;
@@ -94,7 +87,7 @@
 	/* por acabar .... */
 	.btn_add_iri {
 		width: 26px;
-		display: inline-block;
+		//display: inline-block;
 		top: -23px;
 		/* margin-right: 4px; */
 		margin-top: 0;
@@ -103,20 +96,20 @@
 		padding-left: 5px;		
 		background-image: none;
 		box-shadow: none;
-		position: absolute;
-		left: 90%;
-		margin-left: 7px;
+		//position: absolute;
+		//left: 90%;
+		//margin-left: 7px;
 		z-index: 1;
 	    @media screen and (min-width: @content_data_max_width) {
 			top: 1px;
-			margin-left: 23px;
+			//margin-left: 23px;
 			height: 26px;
 			padding-top: 5px;
 	    }
 	}
 
 	.css_iri_add {
-		display: inline-block;
+		//display: inline-block;
 	    width: 14px;
 	    height: 14px;
 	    line-height: 14px;
@@ -135,7 +128,12 @@
 
 	.css_wrap_iri .input-group {
 		width: 100%;
+		display: flex;
 	}
+	.css_wrap_iri ul {
+		width: 100%;
+	}
+
 
 
 
