--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -442,5 +442,5 @@ div.dato_refecence_default_lang {
 	}
 
 	.new_element_container{
-		background-color: #f3f0f0;
+		background-color: lighten(@color_selected_wrap, 2%);
 	}
