Minor css changes

--- a/lib/dedalo/component_text_area/css/component_text_area.less
+++ b/lib/dedalo/component_text_area/css/component_text_area.less
@@ -27,6 +27,7 @@
 	}
 
 
+
 /* TEXT_AREA_CONTENT . Case component in read only div (permissions 1) (like tool_lang)
 ----------------------------------------------- */
 	div.text_area_content {
@@ -649,6 +650,11 @@ div.mce-tinymce.mce-fullscreen {
 	}
 
 
+
+.css_wrap_text_area > .component_tools_container {
+	//top: -38px;
+    z-index: 99;	
+}
 /* component_tools_container in portal_list mode
 -------------------------------------------------- */
 .css_wrap_text_area_portal_list > .component_tools_container {
