--- a/lib/dedalo/section_group/css/section_group.less
+++ b/lib/dedalo/section_group/css/section_group.less
@@ -42,6 +42,7 @@
 /* DIV TITULO DEL SECTION GROUP 
 ----------------------------------------- */
 .css_section_group_titulo {
+	width: 100%;
 	height: 19px;
 	padding: 0px;
 	padding-left: 3px;
