Fix issue when new record is added on empty portals and no list header is showed

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -834,8 +834,10 @@ th.tag_id_column {
 	}
 
 
-
-
+// Hide header list in portal when is empty
+.row_header_hide {
+	display: none !important;
+}
 
 
 
