Fixed portal new element selection when auto open created record window

--- a/lib/dedalo/component_portal/html/component_portal_edit_view_mosaic.phtml
+++ b/lib/dedalo/component_portal/html/component_portal_edit_view_mosaic.phtml
@@ -220,7 +220,7 @@ if($this->generate_json_element===true) {
 									$mosaic_html .= "<div class='div_image_link link' title=\"$title\" onclick=\"alert('Deleted record')\"> ! </div>";
 								}else{
 									$mosaic_html .= "<a href=\"javascript:void(0);\" class=\"button_edit link\" onclick=\"component_portal.open_record(this,'$url')\"
-													id=\"portal_link_open_{$section_tipo}_{$section_id}\"
+													id=\"portal_link_open_{$tipo}_{$section_tipo}_{$section_id}\"
 													title=\"$title\">";
 										# SECTION_ID TEXT
 										/*
