--- a/lib/dedalo/dd/css/dd_list.less
+++ b/lib/dedalo/dd/css/dd_list.less
@@ -90,29 +90,29 @@ select {
   padding-right: 4px;
 }
 #terminoID {
-  width: 70px;
+  width: 90px;
   text-align: center;
   transition: all 0.06s ease-in-out;
-}
-#terminoID:focus {
-  width: 80px;
-}
+  }
+  #terminoID:focus {
+    //width: 80px;
+  }
 #termino {
-  width: 70px;
+  width: 90px;
   text-align: center;
   transition: all 0.08s ease-in-out;
-}
-#termino:focus {
-  width: 100px;
-}
+  }
+  #termino:focus {
+    //width: 100px;
+  }
 #def {
-  width: 60px;
+  width: 70px;
   text-align: center;
   transition: all 0.2s ease-in-out;
-}
-#def:focus {
-  width: 100px;
-}
+  }
+  #def:focus {
+    //width: 100px;
+  }
 #tipo {
   width: 40px !important;
   transition: all 0.2s ease-in-out;
@@ -133,6 +133,7 @@ select {
 #tesauro_content {
   font-size: 11px;
   color: #3C3C3C;
+  padding-top: 5px;
 }
 .marginTopNoHead {
   margin-top: 8px;
