Adapt css of tool description to work with new service_autocomplete hide mode

--- a/lib/dedalo/tools/tool_description/css/numisdata201.less
+++ b/lib/dedalo/tools/tool_description/css/numisdata201.less
@@ -157,7 +157,7 @@
 		
 	}
 	// Legend reverse
-	.container_numisdata71 {
+	.container_numisdata71 > .wrap_component {
 		
 	}
 
@@ -170,4 +170,23 @@
 		
 	}
 
+
+	// Left search autocomplete
+	.wrap_component_numisdata560 {
+	 	.component_options_container {
+	 		display: block;
+	 		//width: ~"calc(100% + 15px)";
+	 	}
+	 	.grid_images_container {
+	 		background-color: transparent;
+	 		padding-bottom: 5px;
+	 	}
+	}
+
+
+
+	.component_options_container {
+		width: ~"calc(100% + 10px)";
+		left: -5px;
+	}
 
