fix relation_list inside inspector

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -11,7 +11,6 @@
 	.relation_grid{
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-	
 	}
 	.relation_list_data_row_center{
 		justify-self: center;
@@ -24,7 +23,10 @@
 	}
 	.relation_list_header{
 		color: #333;
-	}
+		padding: 3px;
+	}.relation_list_count{
+		float: right;
+	}	
 	.relation_list_data_header{
 		background-color: #eee;
 	}
