--- a/lib/dedalo/inspector/html/inspector_edit.phtml
+++ b/lib/dedalo/inspector/html/inspector_edit.phtml
@@ -112,8 +112,13 @@
 		# RELATIONS
 		#
 			$html .= "<div id=\"relations_info_wrapper\">";
-				$html .= "<div class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_relations_list_tap\"";
-				$html .= 'onclick=\'relation_list.init(this,'.$init_json.')\' ';
+				$html .= "<div id=\"inspector_relation_list\" class=\"css_section_group_titulo tab_title title_down_box text_unselectable border_radius_0\" data-tab_id=\"Inspector_relations_list_tap\"";
+				$html .= 'data-relation_list_name=\''.$relation_list_name .'\' ';
+				$html .= 'data-modo = "'.$modo .'" ';
+				$html .= 'data-tipo = "'.$relation_list .'" ';
+				$html .= 'data-section_tipo = "'.$section_tipo .'" ';
+				$html .= 'data-section_id = "'.$section_id .'" ';
+				$html .= 'onclick=\'relation_list.init(this)\' ';
 				$html .= " >";
 				$html .= "<label class=\"css_label\">".label::get_label('relaciones')."</label>";
 				$html .= "</div>";
