Add to change the gird style dynamically by columns

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -8,10 +8,10 @@
 
 /* WRAPPER relation_list
 ------------------------------------------------------- */
-	.relation_grid{
+	/*.relation_grid{
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-	}
+	}*/
 	.relation_list_data_row_center{
 		justify-self: center;
 	}
