Add paginator to relation_list in inspector

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -33,3 +33,16 @@
 	.relation_list_data_row{
 		border-bottom: 0.5px solid #d5d5d5;
 	}
+
+	.relation_list_paginator_next{
+		background-position: -264px -72px;
+		transform: scale(1, 1);
+		margin-left: 4px;
+	}
+	.relation_list_paginator_previous{
+		background-position: -264px -72px;
+		transform: scale(-1, 1);
+	}
+	.relation_list_paginator_buttons{
+		float: right;
+	}
