--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -15,11 +15,14 @@
 	.relation_list_data_row_center{
 		justify-self: center;
 	}
-
 	.relation_list_grid{
 		padding-left: 5px;
 		margin-bottom: 5px;
 		border-left: .5px solid #ff951f;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;  
 	}
 	.relation_list_header{
 		color: #333;
@@ -34,6 +37,14 @@
 		border-bottom: 0.5px solid #d5d5d5;
 	}
 
+	/* PAGINATOR */
+	.relation_list_paginator{
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;  
+	}
+
 	.relation_list_paginator_next{
 		background-position: -264px -72px;
 		transform: scale(1, 1);
@@ -42,7 +53,19 @@
 	.relation_list_paginator_previous{
 		background-position: -264px -72px;
 		transform: scale(-1, 1);
+		margin-left: 4px;
 	}
 	.relation_list_paginator_buttons{
 		float: right;
+
 	}
+	.relation_list_paginator_current{
+		margin-left: 4px;
+	}
+	.relation_list_paginator_offset_off{
+		opacity: .1 !important;
+	}
+
+
+
+
