--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -5,6 +5,13 @@
 */
 
 
+/* BUTTON relation_list
+------------------------------------------------------- */
+.relation_list_button{
+	background-position: -312px -119px;
+	float: right;
+	right: 5px;
+}
 
 /* WRAPPER relation_list
 ------------------------------------------------------- */
