change the :hover style of the grids of relation_list

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -22,6 +22,10 @@
 	.relation_list_data_row_center{
 		justify-self: center;
 	}
+	.relation_list_data_row:hover{
+		color: #000;
+		cursor:pointer;
+	};
 	.relation_list_grid{
 		padding-left: 5px;
 		margin-bottom: 5px;
