add the update relation_button section_id with the paginator in the section.js

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -29,7 +29,7 @@
 	.relation_list_grid{
 		padding-left: 5px;
 		margin-bottom: 5px;
-		border-left: .5px solid #ff951f;
+		border-left: 2px solid #ff951f;
 		-webkit-user-select: none;
 		-moz-user-select: none;
 		-ms-user-select: none;
@@ -37,7 +37,8 @@
 	}
 	.relation_list_header{
 		color: #333;
-		padding: 3px;
+		padding-left: 3px;
+		padding-right: 3px;
 	}.relation_list_count{
 		float: right;
 	}	
