--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -54,30 +54,47 @@
 .key, .value {
 	line-height: 1em;
 	margin-bottom: 1px;
-	padding: 1px;
+	padding: 2px;
 }
-.key {
-	display: inline-block;
-	min-width: 50px;
-	background-color: #eeeeee;
-	margin-right: 0px;
-	padding-left: 2px;
-	padding-right: 2px;
-	text-align: right;
-	border-radius: 2px;
+.inspector_div_content .key {
+	//display: inline-block;
+	//min-width: 50px;
+	//background-color: #eeeeee;
+	//margin-right: 0px;
+	//padding-left: 2px;
+	//padding-right: 2px;
+	//text-align: right;
+	//border-radius: 2px;
 	
+    display: block;
+    min-width: 52px;
+    background-color: #eee;
+    margin-right: 0;       
+    text-align: right;
+    border-radius: 2px;
+    clear: left;
+    float: left;
 }
-.value {
-	display: inline;
-	margin-left: 2px;
-	max-height: 300px;
+
+.inspector_div_content .value {
+	//display: inline;
+	//margin-left: 2px;
+	//max-height: 300px;
 	//max-width: 40px;
-	text-overflow: ellipsis;
-	overflow: hidden;
+	//text-overflow: ellipsis;
+	//overflow: hidden;
 	/*white-space: nowrap; Don't forget this one
 	display: inline-block;*/
-	word-break: break-all;
-	width: 70%;
+	//word-break: break-all;
+	//width: 70%;
+
+	margin-left: 2px;
+    max-height: 300px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-all;   
+    float: left;    
+    margin-left: 2px;
 }
 .value_bold {
 	color: #333333;
@@ -98,10 +115,17 @@
 	min-height: 0px;
 }
 
-#inspector_info {
-	min-height: 22px;
-	padding-left: 5px;
-}
+
+
+/* INSPECTOR_INFO
+---------------------------------------- */
+	#inspector_info {
+		min-height: 22px;
+		padding-left: 5px;
+	}
+
+
+
 /* INSPECTOR TOOLS
 ---------------------------------------- */
 #inspector_tools {
