add comments to the code and add the swith button

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -8,6 +8,11 @@
 /* BUTTON relation_list
 ------------------------------------------------------- */
 .relation_list_button{
+	background-position: -288px -119px;
+	float: right;
+	right: 5px;
+}
+.relation_list_button_off{
 	background-position: -312px -119px;
 	float: right;
 	right: 5px;
