--- a/lib/dedalo/component_portal/html/component_portal_list_view_mosaic.phtml
+++ b/lib/dedalo/component_portal/html/component_portal_list_view_mosaic.phtml
@@ -26,7 +26,7 @@ if($this->generate_json_element===true) {
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in');
 
-	$component_alias_css = isset($propiedades->alias_component_tipo) ? ' wrap_component_'.$propiedades->alias_component_tipo : '';
+	$component_alias_css = isset($propiedades->alias_component_tipo) ? ' alias_'.$propiedades->alias_component_tipo : '';
 	
 	#print "<div id=\"portal_table_{$tipo}\" class=\"wrap_component css_wrap_portal wrap_component_{$modo} wrap_component_{$edit_view} wrap_component_{$tipo}\" ";
 	print '<div id="portal_table_'.$tipo.'" class="wrap_component css_wrap_portal wrap_component_'.$modo.' wrap_component_'.$edit_view.' wrap_component_'.$tipo . $component_alias_css.'" ';
