--- a/lib/dedalo/tools/tool_description/css/numisdata201.less
+++ b/lib/dedalo/tools/tool_description/css/numisdata201.less
@@ -22,36 +22,62 @@
 	    grid-template-columns: 234px 1fr;
 	    grid-template-areas: "sidebar top" "sidebar bottom";
 	    grid-template-rows: auto;
+
+	    // All component_options_container in current tool page (autocomplete)
+	    .component_options_container {	 		
+	 		width: ~"calc(100% + 10px)";
+	 		left: -5px;
+	 	}
 	}
 
+	// Section group 1 (autocomplete)
 	.container_numisdata572 {
 		grid-area: sidebar;
-		background-color: #83F05C
+		background-color: #83F05C;
+
+		// SVG autocomplete_hi
+		.css_wrap_autocomplete_hi > label {
+			width: 90%;
+			max-width: 90%;
+		}
+
+		// Left search autocomplete
+		.wrap_component_numisdata560 {
+		 	.component_options_container {
+		 		display: block;
+		 	}
+		 	.grid_images_container {
+		 		background-color: transparent;
+		 		padding-bottom: 5px;
+		 	}
+		}
 	}
 	
-	// Section group 1
+	// Section group 2 (portal mosaic of file)
 	.container_numisdata191 {
 		grid-area: top;
-		background-color: #E2EF66
+		background-color: #E2EF66;
+
+		// Inside portal is a grid too
+		.portal_item_numisdata77 {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: 1.7fr 1fr;
+		}
 	}
-	// Section group 2
+	// Section group 3 (number of catalog)
 	.container_numisdata199 {
 		grid-area: bottom;
-		background-color: #E9CDED
-	}
+		background-color: #E9CDED;
 
-
-	.portal_item_numisdata77 {
+		// Inside is a grid too
 		display: grid;
-	    grid-template-columns: 1fr 1fr;	    
-	    grid-template-rows: 1.7fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: auto;
 	}
 
-	.container_numisdata199 {
-		display: grid;
-	    grid-template-columns: 1fr 1fr;
-	    grid-template-rows: auto;
-	}
+	
+
 
 
 // Section groups
@@ -72,25 +98,8 @@
 		
 	}
 
-
-
-
-	// SVG autocomplete_hi
-	.container_left .css_wrap_autocomplete_hi > label {
-		width: 90%;
-		max-width: 90%;
-	}
-	// Left search autocomplete
-	.wrap_component_numisdata560 {
-	 	.component_options_container {
-	 		display: block;
-	 		width: ~"calc(100% + 15px)";
-	 	}
-	 	.grid_images_container {
-	 		background-color: transparent;
-	 		padding-bottom: 5px;
-	 	}
-	}
+	
+	
 
 
 
@@ -166,22 +175,6 @@
 		
 	}
 
-
-	// Left search autocomplete
-	.wrap_component_numisdata560 {
-	 	.component_options_container {
-	 		
-	 	}
-	 	.grid_images_container {
-	 		
-	 	}
-	}
-
-
-
-	.component_options_container {
-		
-	}
 
 
 
