Add > to label and content_data mixings

--- a/lib/dedalo/common/css/mixins.less
+++ b/lib/dedalo/common/css/mixins.less
@@ -76,14 +76,14 @@
 /* COMPONENT MODES
 ---------------------------------- */
 	.vertical {			
-		.label  {
+		>.label  {
 			width: 100%;
 			max-width: 100%;
 			min-height: initial;
 			padding-left: 0;
 			//background-color: #FFD700;
 		}
-		.content_data {
+		>.content_data {
 			width: 100%;
 			display: block;
 			//display: table; // En pruebas (6-10-2016) !!! estaba anteriormrnte en 'block'
