fix label procesing

--- a/lib/dedalo/tools/tool_layout_print/html/tool_layout_print_render.phtml
+++ b/lib/dedalo/tools/tool_layout_print/html/tool_layout_print_render.phtml
@@ -30,7 +30,7 @@ $html='';
 			#
 			# TRIGGER COMMAND
 			$html .= "<div id=\"render_pdf_response\" class=\"\">";
-			$html .= " <span class=\"printing_animated\"></span> <br><br>".label::get_label('rendering_pdf');	//<span class=\"css_spinner\"></span>
+			$html .= " <span class=\"printing_animated\"></span> <br><br>".label::get_label('processing_wait');	//<span class=\"css_spinner\"></span>
 			$html .= "</div>";
 
 		$html .= "</div>";
