fix relation_list processing label

--- a/lib/dedalo/relation_list/css/relation_list.less
+++ b/lib/dedalo/relation_list/css/relation_list.less
@@ -17,7 +17,11 @@
 	float: right;
 	right: 5px;
 }
-
+.relation_list_waiting{
+	padding: 10px;
+	padding-left: 15px;
+	font-size: 15px;
+}
 /* WRAPPER relation_list
 ------------------------------------------------------- */
 	/*.relation_grid{
