Clean code css / js / html

--- a/lib/dedalo/tools/tool_description/css/tool_description.less
+++ b/lib/dedalo/tools/tool_description/css/tool_description.less
@@ -129,7 +129,7 @@ body {
 	
 
 /* COMMON
------------------------------------------------------- */
+------------------------------------------------------ 
 	// All components containers default
 	.component_container {
 		//background-color: #EBD4F5;
@@ -141,6 +141,6 @@ body {
 	.container_look_inside {
 		width: 100%;
 	}
-
+*/
 	
 
