Fix and clean apperance issue

--- a/lib/dedalo/extras/oh/widgets/descriptors/css/descriptors.less
+++ b/lib/dedalo/extras/oh/widgets/descriptors/css/descriptors.less
@@ -49,10 +49,10 @@
 			min-width: 28px;
 			width: 10%;
 		}
-		.widget_descriptors li .label_second {			
-			white-space: initial;
-			width: 164%;
-			display: list-item;
+		.widget_descriptors li .label_second {		
+			//white-space: initial;
+			//width: 164%;
+			//display: list-item;
 		}
 		.widget_descriptors li .header {
 			border-top: 1px solid #ECECEC;
